# sentiment-analysis-cli-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: args.rs  lib.rs  main.rs
