[package]
name = "sentiment"
version = "0.3.1"
edition = "2021"
authors = ["Laurence Sonnenberg <laurence@robothouse.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.60"
colored = "2.0.4"
clap = { version = "4.5.4", features = ["derive"] }
vader_sentiment = "0.1.1"
comfy-table = "7.1.1"
reqwest = {version = "0.12.4", features = ["blocking"]}
scraper = "0.19.0"

[dev-dependencies]
wiremock = "0.6.0"
tokio = { version = "1.32", features = ["macros"] }
